Adding link to rules of the game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="https://github.com/hashbhavik/simon-game/blob/develop/README.md" target="_blank"> Rules </a>
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
     <div class="row">
